fix(rei): ensure all custom displays resolve ingredients via EntryIngredients.ofIngredient and use registryAccess for result items